--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<section class="buttons">
 								<a href="https://www.linkedin.com/in/Andrea-Stelliferi" class="button" target="_blank"><img src="images/linkedin-svgrepo-com (1).svg" width="50" height="100" style="vertical-align:middle;"></a>
 								<a href="https://github.com/Stello021" class="button" target="_blank"><img src="images\github-142-svgrepo-com.svg" width="50" height="100" style="vertical-align:middle;"></a>
-								<a href="assets\files\Andrea Stelliferi CV.pdf" class="button" target="_blank"><img src="images/cv.png" width="100" height="90" style="vertical-align:middle;"> </a>
+								<a href="assets\files\AndreaStelliferiCV (2).pdf" class="button" target="_blank"><img src="images/cv.png" width="100" height="90" style="vertical-align:middle;"> </a>
 								<a href="https://twitter.com/StelloDev" class="button" target="_blank"><img src="images\twitter-svgrepo-com.svg" width="50" height="100" style="vertical-align:middle;"></a>
 							</section>
 
