--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<div class="inner">
 							<header>
 								<h1>ANDREA STELLIFERI</h1>
-								<p>Game Programmer from Italy <img src="images\italy-svgrepo-com.svg" alt="Italy flag" width="50" height="40" style="vertical-align: middle;"></p>
+								<p>Game Programmer</p>
 							</header>
 
 							<section class="buttons">
@@ -33,121 +33,26 @@
 								<a href="https://twitter.com/StelloDev" class="button" target="_blank"><img src="images\twitter-svgrepo-com.svg" width="50" height="100" style="vertical-align:middle;"></a>
 							</section>
 
-							<section class="technical-skills">
-								<h2>Technical Skills</h2>								
-								<h3>Languages</h3>
-								<div class="skills-grid">
-									<div class="skill">
-										<img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Logo_C_sharp.svg" class="skill-icon">
-										<span>C#</span>
-									</div>
-									<div class="skill">
-										<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Python_icon_%28black_and_white%29.svg/768px-Python_icon_%28black_and_white%29.svg.png?20191021011545" class="skill-icon">
-										<span>Python</span>
-									</div>
-									<div class="skill">
-										<img src="https://camo.githubusercontent.com/9300046c1dc027f17fb042d688a0865ce70adc3a4535490e07609c5fcee2c2b1/68747470733a2f2f76697375616c706861726d2e636f6d2f6173736574732f3232392f5838362d3539356234306238356261303336656431313764656137312e737667" class="skill-icon">
-										<span>Assembly</span>
-									</div>
-									<div class="skill">
-										<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/C_Language_Logo.svg/813px-C_Language_Logo.svg.png?20221120083002" class="skill-icon">
-										<span>C</span>
-									</div>
-									<div class="skill">
-										<img src="images\hiclipart.com.png" class="skill-icon">
-										<span>C++</span>
-									</div>
-									<div class="skill">
-										<img src="images\Lua.png" class="skill-icon">
-										<span>Lua</span>
-									</div>
-									<div class="skill">
-										<img src="https://www.svgrepo.com/show/373629/glsl.svg" class="skill-icon">
-										<span>GLSL</span>
-									</div>
-									<div class="skill">
-										<img src="https://www.svgrepo.com/show/373663/hlsl.svg" class="skill-icon">
-										<span>HLSL</span>
-									</div>
-								</div>
-								<h3>SOFTWARE & TECHNOLOGIES</h3>
-								<div class="skills-grid">
-									<div class="skill">
-										<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Visual_Studio_Icon_2022.svg/290px-Visual_Studio_Icon_2022.svg.png" class="skill-icon">
-										<span>Visual Studio</span>
-									</div>
-									<div class="skill">
-										<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Visual_Studio_Code_1.35_icon.svg/768px-Visual_Studio_Code_1.35_icon.svg.png" class="skill-icon">
-										<span>VS Code</span>
-									</div>
-									<div class="skill">
-										<img src="https://www.svgrepo.com/show/394536/unreal-engine.svg" class="skill-icon">
-										<span>Unreal Engine</span>
-									</div>
-									<div class="skill">
-										<img src="https://www.svgrepo.com/show/473818/unity.svg" class="skill-icon">
-										<span>Unity</span>
-									</div>
-									<div class="skill">
-										<img src="https://www.svgrepo.com/show/373620/gamemaker81.svg" class="skill-icon">
-										<span>Game Maker</span>
-									</div>
-									<div class="skill">
-										<img src="images\Simple DirectMedia Layer (SDL).png" class="skill-icon">
-										<span>SDL 2</span>
-									</div>
-									<div class="skill">
-										<img src="https://love2d.org/w/images/thumb/6/68/love-app-0.10.png/144px-love-app-0.10.png" class="skill-icon">
-										<span>Love2D</span>
-									</div>
-									<div class="skill">
-										<img src="https://www.svgrepo.com/show/353782/git-icon.svg" class="skill-icon">
-										<span>Git</span>
-									</div>
-									<div class="skill">
-										<img src="https://www.svgrepo.com/show/342309/trello.svg" class="skill-icon">
-										<span>Trello</span>
-									</div>
-									<div class="skill">
-										<img src="https://www.svgrepo.com/show/373509/cmake.svg" class="skill-icon">
-										<span>Cmake</span>
-									</div>
-									<div class="skill">
-										<img src="https://www.svgrepo.com/show/373629/glsl.svg" class="skill-icon">
-										<span>OpenGL</span>
-									</div>
-									<div class="skill">
-										<img src="images\cdnlogo.com_microsoft-directx.svg" class="skill-icon">
-										<span>DirectX</span>
-									</div>
-								</div>
-								<h1></h1>
-								<h1></h1>
+							<section class="Projects">
 								<div class="container swiper">
 									<div class="card-wrapper">
 										<ul class="card-list swiper-wrapper">
 											<li class="card-item swiper-slide">
 												<a href="ever-tide.html" class="card-link">
 													<img src="images\(317) Ever Tide 00-02-28.png" alt="" class="card-image">
-													<p></p>
-													<h2 class="card-title">Ever Tide</h2>
-													<p class="badge">Academic Team Project</p>
 													<ul>
-														<li style="color: black"> <strong>Unreal Engine 5</strong> </li>
-														<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Gameplay Programmer</strong> </li>
+													<li style="color: black"> <strong>Unreal Engine 5</strong> </li>
+													<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Gameplay Programmer</strong> </li>
 													</ul>
 													<button class="card-button
 													material-symbols-outlined">arrow_forward</button>
-	
 												</a>
 											</li>
 											<li class="card-item swiper-slide">
 												<a href="https://www.youtube.com/watch?v=tuR1x_kMNi4" class="card-link">
 													<img src="images\sddefault-1734619657.jpg" alt="" class="card-image">
-													<h2 class="card-title">Pro Shoot'o Survive</h2>
-													<p class="badge">Academic Team Project</p>
 													<ul>
-														<li style="color: black"> <strong>Unity</strong> </li>
+														<li style="color: black;"> <strong>Unity</strong> </li>
 														<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Lead Gameplay Programmer</strong> </li>
 														<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Enemy AI Programmer</strong> </li>
 													</ul>
@@ -159,8 +64,6 @@
 											<li class="card-item swiper-slide">
 												<a href="https://www.linkedin.com/posts/andrea-stelliferi_madewithunity-gamedev-unity3d-activity-7094974271231262720-uaRN?utm_source=share&utm_medium=member_desktop" class="card-link">
 													<img src="images\Logo-def.png" alt="" class="card-image">
-													<h2 class="card-title">Journey To The Roots</h2>
-													<p class="badge">GGJ 2023</p>
 													<ul>
 														<li style="color: black"> <strong>Unreal Engine 4</strong> </li>
 														<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Lead Gameplay Programmer</strong> </li>
