--- a/ever-tide.html
+++ b/ever-tide.html
@@ -18,19 +18,15 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
+							<div style="padding-bottom:55%; position:relative; display:block; width: 100%">
+								<iframe width="100%" height="100%"
+								src="https://www.youtube.com/embed/kdXzNKfqDE0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+								referrerpolicy="strict-origin-when-cross-origin" 
+								allowfullscreen style="position:absolute; top:0; left: 0"></iframe>
+							</div>
 							<h1 style="text-align: center;">Ever Tide</h1>
-							<iframe width="853" height="480" src="https://www.youtube.com/embed/kdXzNKfqDE0" title="Ever Tide" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-							<p></p>
 							<p>Ever Tide is a turn-based JRPG set in a fantasy world, 
 							where the player needs to collect different items and defeat creature to discover the mistery that hide this fallen world. </p>
-							<h3>The Team</h3>
-							<p>People around the project are 10 students from last year's courses of multiple disciplines,
-							including Game Design, Game Programming and 3D Graphics at AIV - Accademia italiana Videogiochi.
-						    The assignament lasted for 10 months from pitching the idea to delivering a little demo and video presentation.</p>
-							<p>
-								During these months the team feced all typical problems like explain and understand tasks assigned, manage own tasks to respect deadlines, debates and version control issues.
-								 All these situation allows to improve my soft skills like comunication, working in team, problem solving, be proactive, resourcefulness.
-							</p>
 							<h3>My Role</h3>
 							<p>
 								As Gameplay Programmer my role included working on the entire Combat System, UI programming, Save System and Enemy AI (pathfinding and combat).
@@ -49,7 +45,7 @@
 								</ul>			
 							</p>
 							<h4>Combat System</h4>
-							<img src="images\(318) Ever Tide 00-02-18.png" alt="" width="853" height="480">
+							<img src="images\(318) Ever Tide 00-02-18.png" align="center" width="50%" height="100%">
 							<p>
 								Combat System is based by a custom Game Mode that manage the course of the fight. <br>
 								In BeginPlay, it take references for each unit in the battle. <br>
