--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 							<section class="buttons">
 								<a href="https://www.linkedin.com/in/Andrea-Stelliferi" class="button" target="_blank"><img src="images/linkedin-svgrepo-com (1).svg" width="50" height="100" style="vertical-align:middle;"></a>
 								<a href="https://github.com/Stello021" class="button" target="_blank"><img src="images\github-142-svgrepo-com.svg" width="50" height="100" style="vertical-align:middle;"></a>
-								<a href="assets\files\AndreaStelliferiCV (2).pdf" class="button" target="_blank"><img src="images/cv.png" width="100" height="90" style="vertical-align:middle;"> </a>
 								<a href="https://twitter.com/StelloDev" class="button" target="_blank"><img src="images\twitter-svgrepo-com.svg" width="50" height="100" style="vertical-align:middle;"></a>
 							</section>
 
@@ -40,6 +39,7 @@
 											<li class="card-item swiper-slide">
 												<a href="ever-tide.html" class="card-link">
 													<img src="images\(317) Ever Tide 00-02-28.png" alt="" class="card-image">
+													<p class="badge">Academic Team Project</p>
 													<ul>
 													<li style="color: black"> <strong>Unreal Engine 5</strong> </li>
 													<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Gameplay Programmer</strong> </li>
@@ -51,6 +51,7 @@
 											<li class="card-item swiper-slide">
 												<a href="https://www.youtube.com/watch?v=tuR1x_kMNi4" class="card-link">
 													<img src="images\sddefault-1734619657.jpg" alt="" class="card-image">
+													<p class="badge">Academic Team Project</p>
 													<ul>
 														<li style="color: black;"> <strong>Unity</strong> </li>
 														<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Lead Gameplay Programmer</strong> </li>
@@ -64,6 +65,8 @@
 											<li class="card-item swiper-slide">
 												<a href="https://www.linkedin.com/posts/andrea-stelliferi_madewithunity-gamedev-unity3d-activity-7094974271231262720-uaRN?utm_source=share&utm_medium=member_desktop" class="card-link">
 													<img src="images\Logo-def.png" alt="" class="card-image">
+													<p class="badge">GGJ 2023</p>
+
 													<ul>
 														<li style="color: black"> <strong>Unreal Engine 4</strong> </li>
 														<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Lead Gameplay Programmer</strong> </li>
