--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
 									<div class="card-wrapper">
 										<ul class="card-list swiper-wrapper">
 											<li class="card-item swiper-slide">
+												<a href="https://bd-tracer.itch.io/babel-bubble" class="card-link">
+													<img src="https://img.itch.zone/aW1nLzE5NjE0MDc1LnBuZw==/347x500/BQkOQ%2B.png" alt="" class="card-image">
+													<p class="badge">GGJ 2025</p>
+													<ul>
+													<li style="color: black"> <strong>Unreal Engine 5</strong> </li>
+													<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Gameplay Programmer</strong> </li>
+													</ul>
+													<button class="card-button
+													material-symbols-outlined">arrow_forward</button>
+												</a>
+											</li>
+											<li class="card-item swiper-slide">
 												<a href="ever-tide.html" class="card-link">
 													<img src="images\(317) Ever Tide 00-02-28.png" alt="" class="card-image">
 													<p class="badge">Academic Team Project</p>
