--- a/index.html
+++ b/index.html
@@ -17,89 +17,96 @@
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>ANDREA STELLIFERI</h1>
-								<p>Game Programmer</p>
-							</header>
-
-							<section class="buttons">
-								<a href="https://www.linkedin.com/in/Andrea-Stelliferi" class="button" target="_blank"><img src="images/linkedin-svgrepo-com (1).svg" width="50" height="100" style="vertical-align:middle;"></a>
-								<a href="https://github.com/Stello021" class="button" target="_blank"><img src="images\github-142-svgrepo-com.svg" width="50" height="100" style="vertical-align:middle;"></a>
-								<a href="https://twitter.com/StelloDev" class="button" target="_blank"><img src="images\twitter-svgrepo-com.svg" width="50" height="100" style="vertical-align:middle;"></a>
-							</section>
-
-							<section class="Projects">
-								<div class="container swiper">
-									<div class="card-wrapper">
-										<ul class="card-list swiper-wrapper">
-											<li class="card-item swiper-slide">
-												<a href="https://bd-tracer.itch.io/babel-bubble" class="card-link">
-													<img src="https://img.itch.zone/aW1nLzE5NjE0MDc1LnBuZw==/347x500/BQkOQ%2B.png" alt="" class="card-image">
-													<p class="badge">GGJ 2025</p>
-													<ul>
-													<li style="color: black"> <strong>Unreal Engine 5</strong> </li>
-													<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Gameplay Programmer</strong> </li>
-													</ul>
-													<button class="card-button
-													material-symbols-outlined">arrow_forward</button>
-												</a>
-											</li>
-											<li class="card-item swiper-slide">
-												<a href="ever-tide.html" class="card-link">
-													<img src="images\(317) Ever Tide 00-02-28.png" alt="" class="card-image">
-													<p class="badge">Academic Team Project</p>
-													<ul>
-													<li style="color: black"> <strong>Unreal Engine 5</strong> </li>
-													<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Gameplay Programmer</strong> </li>
-													</ul>
-													<button class="card-button
-													material-symbols-outlined">arrow_forward</button>
-												</a>
-											</li>
-											<li class="card-item swiper-slide">
-												<a href="https://www.youtube.com/watch?v=tuR1x_kMNi4" class="card-link">
-													<img src="images\sddefault-1734619657.jpg" alt="" class="card-image">
-													<p class="badge">Academic Team Project</p>
-													<ul>
-														<li style="color: black;"> <strong>Unity</strong> </li>
-														<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Lead Gameplay Programmer</strong> </li>
-														<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Enemy AI Programmer</strong> </li>
-													</ul>
-													<button class="card-button
-													material-symbols-outlined">arrow_forward</button>
-	
-												</a>
-											</li>
-											<li class="card-item swiper-slide">
-												<a href="https://www.linkedin.com/posts/andrea-stelliferi_madewithunity-gamedev-unity3d-activity-7094974271231262720-uaRN?utm_source=share&utm_medium=member_desktop" class="card-link">
-													<img src="images\Logo-def.png" alt="" class="card-image">
-													<p class="badge">GGJ 2023</p>
-
-													<ul>
-														<li style="color: black"> <strong>Unreal Engine 4</strong> </li>
-														<li style="color: rgba(0, 0, 255, 0.536)"> <strong>Lead Gameplay Programmer</strong> </li>
-													</ul>
-													<button class="card-button
-													material-symbols-outlined">arrow_forward</button>
-	
-												</a>
-											</li>
-										</ul>
-	
-										<div class="swiper-pagination"></div>
-										<div class="swiper-slide-button swiper-button-prev"></div>
-										<div class="swiper-slide-button swiper-button-next"></div>
-									</div>
+							<div class="main-card">
+								<div class="profile-photo">
+									<img src="images/profile-headshot.jpg" alt="Andrea Stelliferi - Game Programmer">
 								</div>
-							</section>
-							
+								<div class="main-card-content">
+									<header>
+										<h1>ANDREA STELLIFERI</h1>
+										<a href="mailto:andreastelliferi.jobs@gmail.com" class="email">andreastelliferi.jobs@gmail.com</a>
+										<div class="social-links">
+											<a href="https://www.linkedin.com/in/Andrea-Stelliferi" class="button" target="_blank" aria-label="LinkedIn">
+												<img src="images/linkedin-svgrepo-com (1).svg" alt="LinkedIn">
+											</a>
+											<a href="https://github.com/Stello021" class="button" target="_blank" aria-label="GitHub">
+												<img src="images/github-142-svgrepo-com.svg" alt="GitHub">
+											</a>
+										</div>
+									</header>
+
+									<section class="about">
+										<h2>About Me</h2>
+										<p>I'm a Game Programmer specializing in gameplay mechanics 
+											with experience in both Unreal Engine and Unity,
+											 and languages such as C++ and C#. <br>
+											 Currently, looking for my first experience in the industry.</p>
+									</section>
+
+									<section class="projects">
+										<h2>Featured Projects</h2>
+										<div class="projects-grid">
+											<a href="https://bd-tracer.itch.io/babel-bubble" class="project-item">
+												<img src="https://img.itch.zone/aW1nLzE5NjE0MDc1LnBuZw==/347x500/BQkOQ%2B.png" alt="Babel Bubble">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Babel Bubble</span>
+														<span class="project-tag">GGJ 2025</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\cplusplus-svgrepo-com.svg" alt="C++" class="project-icon">
+														<img src="images\unreal-engine-svgrepo-com.svg" alt="Unreal Engine" class="project-icon">
+													</div>
+												</div>
+											</a>
+											<a href="ever-tide.html" class="project-item">
+												<img src="images/(317) Ever Tide 00-02-28.png" alt="Ever Tide">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Ever Tide</span>
+														<span class="project-tag">Academic Team Project</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\cplusplus-svgrepo-com.svg" alt="C++" class="project-icon">
+														<img src="images\unreal-engine-svgrepo-com.svg" alt="Unreal Engine" class="project-icon">
+													</div>
+												</div>
+											</a>
+											<a href="https://www.youtube.com/watch?v=tuR1x_kMNi4" class="project-item">
+												<img src="images/sddefault-1734619657.jpg" alt="Unity Project">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Pro Shoot To Survive</span>
+														<span class="project-tag">Academic Team Project</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\icons8-c-sharp-logo.svg" alt="C#" class="project-icon">
+														<img src="images\unity-svgrepo-com.svg" alt="Unity" class="project-icon">
+													</div>
+												</div>
+											</a>
+											<a href="https://www.linkedin.com/posts/andrea-stelliferi_madewithunity-gamedev-unity3d-activity-7094974271231262720-uaRN?utm_source=share&utm_medium=member_desktop" class="project-item">
+												<img src="images/Logo-def.png" alt="GGJ 2023 Project">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Journey To The Roots</span>
+														<span class="project-tag">GGJ 2023</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\cplusplus-svgrepo-com.svg" alt="C++" class="project-icon">
+														<img src="images\unreal-engine-svgrepo-com.svg" alt="Unreal Engine" class="project-icon">
+													</div>
+												</div>
+											</a>
+										</div>
+									</section>
+								</div>
+							</div>
 						</div>
 					</div>
-
 			</div>
 
 		<!-- Scripts -->
