--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 													</div>
 												</div>
 											</a>
-											<a href="https://www.linkedin.com/posts/andrea-stelliferi_madewithunity-gamedev-unity3d-activity-7094974271231262720-uaRN?utm_source=share&utm_medium=member_desktop" class="project-item">
+											<a href="https://www.linkedin.com/posts/andrea-stelliferi_team-management-ggj-activity-7029750537948442624-XzBG?utm_source=share&utm_medium=member_desktop&rcm=ACoAACW_yysBV5F-OgQy-V2YpTn84KX3ua-LvjQ" class="project-item">
 												<img src="images/Logo-def.png" alt="GGJ 2023 Project">
 												<div class="project-overlay">
 													<div class="project-title-container">
