--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 												<div class="project-overlay">
 													<div class="project-title-container">
 														<span class="project-title">Babel Bubble</span>
-														<span class="project-tag">GGJ 2025</span>
 													</div>
 													<div class="project-icons">
 														<img src="images\cplusplus-svgrepo-com.svg" alt="C++" class="project-icon">
 														<img src="images\unreal-engine-svgrepo-com.svg" alt="Unreal Engine" class="project-icon">
+														<span class="project-tag">GGJ 2025</span>
 													</div>
 												</div>
 											</a>
@@ -67,11 +67,11 @@
 												<div class="project-overlay">
 													<div class="project-title-container">
 														<span class="project-title">Ever Tide</span>
-														<span class="project-tag">Academic Team Project</span>
 													</div>
 													<div class="project-icons">
 														<img src="images\cplusplus-svgrepo-com.svg" alt="C++" class="project-icon">
 														<img src="images\unreal-engine-svgrepo-com.svg" alt="Unreal Engine" class="project-icon">
+														<span class="project-tag">Academic Team Project</span>
 													</div>
 												</div>
 											</a>
@@ -80,11 +80,11 @@
 												<div class="project-overlay">
 													<div class="project-title-container">
 														<span class="project-title">Pro Shoot To Survive</span>
-														<span class="project-tag">Academic Team Project</span>
 													</div>
 													<div class="project-icons">
 														<img src="images\icons8-c-sharp-logo.svg" alt="C#" class="project-icon">
 														<img src="images\unity-svgrepo-com.svg" alt="Unity" class="project-icon">
+														<span class="project-tag">Academic Team Project</span>
 													</div>
 												</div>
 											</a>
@@ -93,11 +93,115 @@
 												<div class="project-overlay">
 													<div class="project-title-container">
 														<span class="project-title">Journey To The Roots</span>
-														<span class="project-tag">GGJ 2023</span>
 													</div>
 													<div class="project-icons">
 														<img src="images\cplusplus-svgrepo-com.svg" alt="C++" class="project-icon">
 														<img src="images\unreal-engine-svgrepo-com.svg" alt="Unreal Engine" class="project-icon">
+														<span class="project-tag">GGJ 2023</span>
+													</div>
+												</div>
+											</a>
+										</div>
+									</section>
+
+									<section class="projects">
+										<h2>Personal Projects</h2>
+										<div class="projects-grid">
+											<a href="https://github.com/Stello021/DynamicSidescroller" class="project-item">
+												<img src="images/Camera.gif" alt="Dynamic Sidescroller">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Dynamic Sidescroller</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\cplusplus-svgrepo-com.svg" alt="C++" class="project-icon">
+														<img src="images\unreal-engine-svgrepo-com.svg" alt="Unreal Engine" class="project-icon">
+														<span class="project-tag">Gameplay System</span>
+													</div>
+												</div>
+											</a>
+											<a href="https://github.com/Stello021/Simple-Tetris-in-Raylib" class="project-item">
+												<img src="images/Screenshot 2025-04-09 212436.png" alt="Simple Tetris">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Simple Tetris</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\c-language-0tmvlupn4wxm8lpqa3q9kin.webp" alt="C" class="project-icon">
+														<img src="images\raylib.svg" alt="Raylib" class="project-icon">
+														<span class="project-tag">Low Level Programming</span>
+													</div>
+												</div>
+											</a>
+											<a href="https://youtu.be/Gf33dFGgNO4" class="project-item">
+												<img src="images/1699354646079-ezgif.com-video-to-gif-converter.gif" alt="Super Waluigi Bros Intro">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Super Waluigi Bros Intro</span>
+													</div>
+													<div class="project-icons">
+													<span class="project-tag">6502 Assembly</span>																				
+													</div>
+												</div>
+											</a>
+											<a href="https://youtu.be/Kd5-JTY9_Pk" class="project-item">
+												<img src="images/Rubblar-RealizzatoconClipchamp_1692893655474-ezgif.com-video-to-gif-converter.gif" alt="Wiggly Sticky Hand">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Wiggly Sticky Hand</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\icons8-c-sharp-logo.svg" alt="C#" class="project-icon">
+														<img src="images\unity-svgrepo-com.svg" alt="Unity" class="project-icon">
+														<span class="project-tag">Gameplay System</span>
+													</div>
+												</div>
+											</a>
+											<a href="https://youtu.be/V1IFLuSL09c" class="project-item">
+												<img src="images/1683816296721-ezgif.com-video-to-gif-converter.gif" alt="ParachutExtreme">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">ParachutExtreme</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\icons8-c-sharp-logo.svg" alt="C#" class="project-icon">
+														<img src="images\unity-svgrepo-com.svg" alt="Unity" class="project-icon">
+														<span class="project-tag">Gameplay System</span>
+													</div>
+												</div>
+											</a>
+											<a href="https://youtu.be/kxjeaqajes8" class="project-item">
+												<img src="images/1679392712901-ezgif.com-video-to-gif-converter.gif" alt="Procedural Flowery Meadow">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Procedural Flowery Meadow</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\icons8-c-sharp-logo.svg" alt="C#" class="project-icon">
+														<img src="images\unity-svgrepo-com.svg" alt="Unity" class="project-icon">
+														<span class="project-tag">Gameplay System</span>
+													</div>
+												</div>
+											</a>
+											<a href="https://youtube.com/shorts/YC0zxm2OZig?feature=share" class="project-item">
+												<img src="images/1667488625876-ezgif.com-video-to-gif-converter.gif" alt="Pytris">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Pytris</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\python-127-svgrepo-com.svg" alt="Python" class="project-icon">
+													</div>
+												</div>
+											</a>
+											<a href="https://youtu.be/7CXLZhIkJug" class="project-item">
+												<img src="images/1667383657109-ezgif.com-video-to-gif-converter.gif" alt="Pyxel Pong">
+												<div class="project-overlay">
+													<div class="project-title-container">
+														<span class="project-title">Pyxel Pong</span>
+													</div>
+													<div class="project-icons">
+														<img src="images\python-127-svgrepo-com.svg" alt="Python" class="project-icon">
 													</div>
 												</div>
 											</a>
