--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 												<img src="images/Camera.gif" alt="Dynamic Sidescroller">
 												<div class="project-overlay">
 													<div class="project-title-container">
-														<span class="project-title">Dynamic Sidescroller</span>
+														<span class="project-title">Dynamic Sidescroller Movement</span>
 													</div>
 													<div class="project-icons">
 														<img src="images\cplusplus-svgrepo-com.svg" alt="C++" class="project-icon">
