--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 										<p>I'm a Game Programmer specializing in gameplay mechanics 
 											with experience in both Unreal Engine and Unity,
 											 and languages such as C++ and C#. <br>
-											 Currently, looking for my first experience in the industry.</p>
+											 Currently looking for a new role.</p>
 									</section>
 
 									<section class="projects">
@@ -183,7 +183,7 @@
 													</div>
 												</div>
 											</a>
-											<a href="https://youtube.com/shorts/YC0zxm2OZig?feature=share" class="project-item">
+											<!-- <a href="https://youtube.com/shorts/YC0zxm2OZig?feature=share" class="project-item">
 												<img src="images/1667488625876-ezgif.com-video-to-gif-converter.gif" alt="Pytris">
 												<div class="project-overlay">
 													<div class="project-title-container">
@@ -203,7 +203,7 @@
 													<div class="project-icons">
 														<img src="images\python-127-svgrepo-com.svg" alt="Python" class="project-icon">
 													</div>
-												</div>
+												</div> -->
 											</a>
 											<a href="https://www.youtube.com/watch?v=087ueZO1ZVQ" class="project-item">
 												<img src="images/087ueZO1ZVQ-HD.jpg" alt="2D Simple Dungeon Crawler">
